# pdf-mcp

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: pdf-mcp.rb
src/: main.rs
