[package]
name = "pdf-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for AI agent interaction with PDF files"

[dependencies]
mupdf = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
